5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4172/executions/1834_1273.log
== TEST (2019-06-27 15:16:48) 
-- CODE:
from numpy.linalg import*
from numpy import*

vet1=array([1,-1,0,0],[0,1,-1,0],[0,0,1,0],[1,0,0,1])
vet2=array([50,-120,350,870])

conta=dot(inv(vet2,vet1))

print(conta)



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy.linalg import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 15:17:18) 
-- CODE:
from numpy.linalg import*
from numpy import*

vet1=array([[1,-1,0,0],[0,1,-1,0],[0,0,1,0],[1,0,0,1]])
vet2=array([50,-120,350,870])

conta=dot(inv(vet2,vet1))

print(conta)



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy.linalg import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 15:17:27) 
-- CODE:
from numpy.linalg import*
from numpy import*

vet1=array([[1,-1,0,0],[0,1,-1,0],[0,0,1,0],[1,0,0,1]])
vet2=array([50,-120,350,870])

conta=dot(inv(vet2),vet1)

print(conta)



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy.linalg import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 15:17:34) 
-- CODE:
from numpy.linalg import*
from numpy import*

vet1=array([[1,-1,0,0],[0,1,-1,0],[0,0,1,0],[1,0,0,1]])
vet2=array([50,-120,350,870])

conta=dot(inv(vet1),vet2)

print(conta)



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy.linalg import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-27 15:17:39) 
-- CODE:
from numpy.linalg import*
from numpy import*

vet1=array([[1,-1,0,0],[0,1,-1,0],[0,0,1,0],[1,0,0,1]])
vet2=array([50,-120,350,870])

conta=dot(inv(vet1),vet2)

print(conta)



-- EXECUTION TIME:
1.2731
-- TEST CASE 1:
---- input:
Não_há
---- correct output:
[280. 230. 350. 590.]
---- user output:
[280. 230. 350. 590.]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 15:17:44) 
-- CODE:
from numpy.linalg import*
from numpy import*

vet1=array([[1,-1,0,0],[0,1,-1,0],[0,0,1,0],[1,0,0,1]])
vet2=array([50,-120,350,870])

conta=dot(inv(vet1),vet2)

print(conta)



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy.linalg import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 12:21:52) 
-- CODE:
from numpy.linalg import*
from numpy import*


veot1=array([[1,-1,0,0],[0,1,-1,0],[0,0,1,0],1,0,0,1])
vet2=arrau([[50,-120,350,870]])

c=dot(inv(veot1),vet2)

print(c)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy.linalg import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 12:21:58) 
-- CODE:
from numpy.linalg import*
from numpy import*


veot1=array([[1,-1,0,0],[0,1,-1,0],[0,0,1,0],1,0,0,1])
vet2=array([[50,-120,350,870]])

c=dot(inv(veot1),vet2)

print(c)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy.linalg import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 12:22:18) 
-- CODE:
from numpy.linalg import*
from numpy import*


veot1=array([[1,-1,0,0],[0,1,-1,0],[0,0,1,0],1,0,0,1])
vet2=array([[50,-120,350,870]])

c=dot(inv(veot2),vet1)

print(c)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy.linalg import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 12:22:28) 
-- CODE:
from numpy.linalg import*
from numpy import*


vet1=array([[1,-1,0,0],[0,1,-1,0],[0,0,1,0],1,0,0,1])
vet2=array([[50,-120,350,870]])

c=dot(inv(vet2),vet1)

print(c)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy.linalg import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 12:23:13) 
-- CODE:
from numpy.linalg import*
from numpy import*

vet1=array([[1,-1,0,0],[0,1,-1,0],[0,0,1,0],[1,0,0,1]])
vet2=array([50,-120,350,870])

conta=dot(inv(vet1),vet2)

print(conta)

vet1=array([[1,-1,0,0],[0,1,-1,0],[0,0,1,0],1,0,0,1])
vet2=array([[50,-120,350,870]])

c=dot(inv(vet1),vet2)

print(c)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy.linalg import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 12:23:27) 
-- CODE:
from numpy.linalg import*
from numpy import*

vet1=array([[1,-1,0,0],[0,1,-1,0],[0,0,1,0],[1,0,0,1]])
vet2=array([50,-120,350,870])

conta=dot(inv(vet1),vet2)

print(conta)

vet1=array([[1,-1,0,0],[0,1,-1,0],[0,0,1,0],1,0,0,1])
vet2=array([50,-120,350,870])

c=dot(inv(vet1),vet2)

print(c)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy.linalg import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 12:23:50) 
-- CODE:
from numpy.linalg import*
from numpy import*

vet1=array([[1,-1,0,0],[0,1,-1,0],[0,0,1,0],[1,0,0,1]])
vet2=array([50,-120,350,870])

conta=dot(inv(vet1),vet2)

print(conta)

vet1=array([[1,-1,0,0],[0,1,-1,0],[0,0,1,0],[1,0,0,1])
vet2=array([50,-120,350,870])

c=dot(inv(vet1),vet2)

print(c)

-- ERROR:
File "XXXX", line 11
    vet1=array([[1,-1,0,0],[0,1,-1,0],[0,0,1,0],[1,0,0,1])
                                                         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 12:24:01) 
-- CODE:
from numpy.linalg import*
from numpy import*

vet1=array([[1,-1,0,0],[0,1,-1,0],[0,0,1,0],[1,0,0,1]])
vet2=array([50,-120,350,870])

conta=dot(inv(vet1),vet2)

print(conta)

vet1=array([[1,-1,0,0],[0,1,-1,0],[0,0,1,0],[1,0,0,1]])
vet2=array([50,-120,350,870])

c=dot(inv(vet1),vet2)

print(c)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy.linalg import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 12:24:14) 
-- CODE:
from numpy.linalg import*
from numpy import*

vet1=array([[1,-1,0,0],[0,1,-1,0],[0,0,1,0],[1,0,0,1]])
vet2=array([50,-120,350,870])

conta=dot(inv(vet1),vet2)

print(conta)

vet1=array([[1,-1,0,0],[0,1,-1,0],[0,0,1,0],[1,0,0,1]])
vet2=array([50,-120,350,870])

c=dot(inv(vet1),vet2)

print(c)

-- EXECUTION TIME:
1.2886
-- TEST CASE 1:
---- input:
Não_há
---- correct output:
[280. 230. 350. 590.]
---- user output:
[280. 230. 350. 590.]
[280. 230. 350. 590.]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 12:24:20) 
-- CODE:
from numpy.linalg import*
from numpy import*


vet1=array([[1,-1,0,0],[0,1,-1,0],[0,0,1,0],[1,0,0,1]])
vet2=array([50,-120,350,870])

c=dot(inv(vet1),vet2)

print(c)

-- EXECUTION TIME:
0.799408
-- TEST CASE 1:
---- input:
Não_há
---- correct output:
[280. 230. 350. 590.]
---- user output:
[280. 230. 350. 590.]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
